--- a/views/loginPage.ng.html
+++ b/views/loginPage.ng.html
@@ -1,3 +1,34 @@
-<div class="container">
-	<h1>This is the loginPage! {{myVar}}.</h1>
+<div class="row">
+	 <div class="col s2 offset-s5">
+			<h1>meetio</h1>
+	 </div>
 </div>
+
+<div class="login-card">
+    <h1>Sign in to continue</h1><br>
+  <form>
+    <input type="text" name="user" placeholder="Email">
+    <input type="password" name="pass" placeholder="Password">
+    <input type="submit" name="login" class="login login-submit" value="login">
+  </form>
+    
+  <div class="login-help">
+    <a href="#">Register</a> • <a href="#">Forgot Password</a>
+  </div>
+</div>
+<!-- 
+<div id="error"><img src="https://dl.dropboxusercontent.com/u/23299152/Delete-icon.png" /> Your caps-lock is on.</div> -->
+
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
+
+
+
+
+<!-- <div class="row">
+      <div class="col s12">This div is 12-columns wide</div>
+      <div class="col s6">This div is 6-columns wide</div>
+      <div class="col s6">This div is 6-columns wide</div>
+</div> -->
+
+<!-- <h1 class="z-depth-2">meetio</h1> -->
